--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "admin",
-  "version": "0.0.0",
+  "name": "vite-project",
   "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,31 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@iconify/vue": "^4.1.2",
-    "@vueuse/core": "^12.7.0",
-    "axios": "^1.7.7",
-    "class-variance-authority": "^0.7.1",
+    "@iconify/vue": "^4.3.0",
+    "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
     "clsx": "^2.1.1",
-    "lucide-vue-next": "^0.477.0",
     "pinia": "^3.0.1",
     "reka-ui": "^2.0.2",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-rtl": "^0.9.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.9",
     "vue": "^3.5.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.5.0",
     "vue-sonner": "^1.3.0",
-    "vue3-apexcharts": "^1.6.0",
     "vue3-persian-datetime-picker": "^1.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.15",
-    "vite": "^6.1.0",
-    "vite-plugin-vue-devtools": "^7.7.2"
-  },
-  "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
+    "daisyui": "^5.0.0",
+    "vite": "^6.2.0"
+  }
 }
